<resources>
    <string name="app_name">Notes</string>
    <string name="make_a_note">MAKE  A NOTE</string>
    <string name="view_notes">VIEW NOTES</string>
    <string name="logo">logo</string>
    <string name="add_note">ADD NOTE</string>
    <string name="insert_note">ADD NOTE</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save_note">SAVE NOTE</string>
    <string name="update_note">UPDATE NOTE</string>
    <string name="delete_note">DELETE NOTE</string>
</resources>
